
[package]
name = "load-reth"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
[workspace]
members = ["."]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/loadnetwork/load-reth"
authors = ["Load Network"]
rust-version = "1.82"

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.dependencies]
# Alloy dependencies pinned to the upstream reth v1.9.3 release
alloy-consensus = "1.0.37"
alloy-eips = "1.0.37"
alloy-genesis = "1.0.37"
alloy-network = "1.0.37"
alloy-primitives = "1.3.1"
alloy-rlp = "0.3.10"
alloy-rpc-types = "1.0.37"
alloy-rpc-types-engine = "1.0.37"
alloy-rpc-types-eth = "1.0.37"
alloy-serde = "1.0.37"
alloy-signer = "1.1.2"
alloy-signer-local = "1.1.2"

# Core utilities aligned with the upstream reth SDK
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = "2.0.1"
eyre = "0.6.12"

# Reth SDK (v1.9.3)
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"

[features]
default = []
# Forward performance features to reth
jemalloc = ["reth/jemalloc"]
asm-keccak = ["reth/asm-keccak"]
# Convenience feature for maximum performance
perf = ["jemalloc", "asm-keccak"]

[dependencies]
# Alloy
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-engine = { workspace = true }

# Core utilities
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
eyre = { workspace = true }
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"

# Reth SDK
reth = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli = { workspace = true }
reth-cli-commands = { workspace = true }
reth-cli-util = { workspace = true }
reth-consensus-common = { workspace = true }
reth-engine-local = { workspace = true }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-cli = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-metrics = { workspace = true }
reth-network = { workspace = true }
reth-network-peers = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-payload-builder = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-transaction-pool = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy-network = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
hex = "0.4"
reth-e2e-test-utils = { workspace = true }
reth-tasks = { workspace = true }
reth-tracing = { workspace = true }
rstest = "0.23"
tokio = { workspace = true }

[lints]
workspace = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.maxperf]
inherits = "release"
lto = "fat"
